Added decimal point

--- a/styles/style.css
+++ b/styles/style.css
@@ -45,5 +45,5 @@ main {
         'seven eight nine multiply'
         'four five six subtract'
         'one two three add'
-        'zero zero equals equals';
+        'zero decimal-point equals equals';
 }
