--- a/styles/display.css
+++ b/styles/display.css
@@ -28,6 +28,7 @@
     align-items: flex-end;
 }
 #first {
+    word-wrap: break-word;
     height: 40px;
     width: 100%;
     font-size: 40px;
@@ -37,6 +38,7 @@
     padding-right: 10px;
 }
 #second {
+    word-wrap: break-word;
     height: 40px;
     width: 100%;
     font-size: 40px;
